# Renderer

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
graphics_engine/: .gitignore  CMakeLists.txt
graphics_engine/dependencies/: CMakeLists.txt
graphics_engine/dependencies/slang/cmake/: slangConfigVersion.cmake
graphics_engine/dependencies/slang/lib/: gfx.lib  slang-rt.lib
graphics_engine/dependencies/vma/docs/html/: allocation_annotation.html  choosing_memory_type.html  custom_memory_pools.html  defragmentation.html  doxygen_crawl.html  general_considerations.html  globals.html  globals_defs.html  group__group__init.html  memory_mapping.html  quick_start.html  resource_aliasing.html  usage_patterns.html  virtual_allocator.html  vk__mem__alloc_8h.html  vk_ext_memory_priority.html  vk_khr_dedicated_allocation.html
graphics_engine/dependencies/vma/src/: VulkanSample.cpp
graphics_engine/include/: NonCopyable.h  allocator.h  asset_loading.h  buffer.h  command.h  debug_messenger.h  descriptor.h  device.h  gui.h  image.h  input_manager.h  instance.h  logger.h  mesh.h  pipeline.h  render_system.h  renderable.h  renderer.h  shader.h  swapchain.h  sync.h  timer.h
graphics_engine/include/render_systems/: gui_render_system.h  render_system.h
graphics_engine/include/renderer/: buffer.h  command.h  descriptor.h  device.h  image.h  instance.h  mesh.h  pipeline.h  renderer.h  shader.h  swapchain.h  sync.h
graphics_engine/include/utility/: allocator.h  asset_loading.h  camera.h  debug_messenger.h  gui.h  input_manager.h  logger.h  timer.h  window.h
graphics_engine/src/: allocator.cpp  asset_loading.cpp  buffer.cpp  camera.cpp  command.cpp  debug_messenger.cpp  descriptor.cpp  device.cpp  gui.cpp  image.cpp  input_manager.cpp  instance.cpp  logger.cpp  mesh.cpp  pipeline.cpp  renderable.cpp  renderer.cpp  shader.cpp  swapchain.cpp  sync.cpp  timer.cpp  window.cpp
graphics_engine/src/render_systems/: gui_render_system.cpp
graphics_engine/src/renderer/: buffer.cpp  command.cpp  descriptor.cpp  device.cpp  frame.cpp  image.cpp  instance.cpp  mesh.cpp  pipeline.cpp  renderer.cpp  shader.cpp  swapchain.cpp  sync.cpp
graphics_engine/src/utility/: allocator.cpp  asset_loading.cpp  camera.cpp  debug_messenger.cpp  gui.cpp  input_manager.cpp  logger.cpp  timer.cpp  window.cpp
include/: application.h  mesh_render_system.h
include/render_systems/: mesh_render_system.h  render_system.h
include/renderer/: descriptor.h  device.h  frame.h  pipeline.h  pipeline_builder.h  queue_family.h  shader.h  swapchain.h
include/utility/: allocator.h  camera.h  debug_messenger.h  input_manager.h  logger.h  window.h
shaders/: mesh.slang
src/: main.cpp  mesh_render_system.cpp
src/render_systems/: mesh_render_system.cpp
src/renderer/: command.cpp  descriptor.cpp  device.cpp  instance.cpp  queue_family.cpp  renderer.cpp  shader.cpp  swapchain.cpp
src/utility/: allocator.cpp  camera.cpp  debug_messenger.cpp  timer.cpp  window.cpp
